src/main/java/com/example/sbfeb7/lib/errors/ErrorType.java
package com.example.sbfeb7.lib.errors;

public enum ErrorType {
    api,
    validation
}
